# menobis

./: .gitignore  404.html  AGENTS.md  CITATION.cff  Cargo.toml  Makefile  PLAN.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
DOCS/: README.md
api/file-formats/: index.html
api/filtering/: index.html
api/network-metrics/: index.html
api/python/: index.html
api/rust/: index.html
benchmarks/: __init__.py  __main__.py  bench_e2e.py  bench_e2e_fitting.py  bench_e2e_full.py  bench_filter.py  bench_filter_calibration.py  bench_fitting.py  bench_generation.py  bench_quick.py  bench_scaling.py  bench_streaming_generation.py  bench_w_fitting.py  check.py  cli.py  common.py  compare_legacy.py  dispatch.py  filter.py  fit.py  fit_memory_matrix.py  generate.py  legacy_compare.py  legacy_fit_compare.py  legacy_supported_fit_compare.py  pipeline.py  plot_filter_calibration.py  plot_streaming_generation.py  regression_baselines.json  sample.py  types.py
benchmarks/results/: .gitignore  e2e_full_results.json  e2e_results.json  filter_calibration.csv  fit_memory_n1000.json  fitting_benchmark.json  legacy_fit_n1000.json  legacy_supported_fit_n1000.json  streaming_generation_20260517T102410Z.csv  streaming_generation_20260517T102410Z.metadata.json  streaming_generation_20260517T204845Z.csv  streaming_generation_20260517T204845Z.metadata.json  streaming_generation_20260517T205552Z.csv  streaming_generation_20260517T205552Z.metadata.json  streaming_generation_20260517T205722Z.csv  streaming_generation_20260517T205722Z.metadata.json  streaming_generation_20260517T205747Z.csv  streaming_generation_20260517T205747Z.metadata.json  (+12 more)
cli/filter/: index.html
crates/menobis-core/: Cargo.toml
crates/menobis-core/benches/: me_strength_degree.rs
crates/menobis-core/src/: clustering.rs  filter.rs  generation.rs  graph.rs  lib.rs  pairs.rs
crates/menobis-core/src/fitting/: b.rs  b_lbfgs.rs  mask.rs  me.rs  me_lbfgs.rs  mod.rs  partial.rs  strength_cost.rs  w.rs  w_lbfgs.rs
crates/odme-core/: Cargo.toml
crates/odme-core/src/: cost.rs  distribution.rs  filter.rs  fitting.rs  generation.rs  graph.rs  gravity.rs  lib.rs  pairs.rs  partial.rs  stats.rs
crates/odme-core/src/fitting/: b.rs  me.rs  mod.rs  partial.rs  strength_cost.rs  support.rs  types.rs  w.rs  w_lbfgs.rs
crates/odme-python/: Cargo.toml
crates/odme-python/src/: lib.rs
docs/: getting-started.md  index.md  thesis-context.md
getting-started/: index.html
scripts/: evaluate_real_data.py  fetch_data.py
search/: search_index.json
tests/: README.md  test_filtering_e2e.py  test_fitting_e2e.py  test_fitting_equations.py  test_fitting_saturation.py  test_fitting_validation.py  test_menobis_analyze.py  test_menobis_api_coherence.py  test_menobis_benchmark.py  test_menobis_benchmark_cli.py  test_menobis_binomial_constraints.py  test_menobis_binomial_fitting_kernels.py  test_menobis_cli.py  test_menobis_cli_analyze.py  test_menobis_cli_convert.py  test_menobis_cli_filter.py  test_menobis_cli_fit.py  test_menobis_cli_fit_degree.py  test_menobis_cli_generate.py  test_menobis_cli_generate_models.py  test_menobis_cli_generate_zip.py  test_menobis_custom_pij.py  test_menobis_distribution_families.py  test_menobis_e2e_pipeline.py  test_menobis_ensemble.py  test_menobis_ensemble_constraints.py  test_menobis_ensemble_equivalence.py  test_menobis_filtering.py  test_menobis_filtering_all_models.py  test_menobis_fit_result_api.py  test_menobis_fitting.py  test_menobis_fitting_failure_policy.py  test_menobis_fitting_no_self_loops.py  test_menobis_fixed_degree.py  test_menobis_fixed_degree_generation.py  test_menobis_fixed_strength_property.py  test_menobis_frames.py  test_menobis_generation.py  test_menobis_graph.py  test_menobis_graph_algorithms.py  (+103 more)
thesis-context/: index.html
(+163 files in other folders)
