[workspace]
members = [
  "crates/odme-core",
  "crates/odme-python",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.80"

[workspace.dependencies]
odme-core = { path = "crates/odme-core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
thiserror = "2"
rand = "0.9"
rand_distr = "0.5"
