[package]
name = "menobis-core"
version = "1.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "menobis_core"
path = "src/lib.rs"

[features]
default = []

[dependencies]
thiserror.workspace = true
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true

