[package]
name = "odme-python"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "_odme"
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = ["w-conic"]
w-conic = ["odme-core/w-conic"]

[dependencies]
odme-core.workspace = true
pyo3.workspace = true
